src/components/CreatePartyPage/Form/Form_footer/style.scss
.link-party-page {
  background-color: $secondary;
  color: #007e50;
  font-family: $big-text;
  font-weight: 800;
  font-size: 20px;
  border: 2px solid #007e50;
  padding: 5px 5px;
  border-radius: 2px;
  margin-top: 1rem;
  margin-left: 5px;
  transition: all 0.3s;
  &:hover {
    color: $secondary;
    background-color: #007e50;
    text-decoration: none;
  }
}

.link-cancel {
  background-color: $secondary;
  color: red;
  font-family: $big-text;
  font-weight: 800;
  font-size: 20px;
  border: 2px solid red;
  padding: 5px 5px;
  border-radius: 2px;
  margin-top: 1rem;
  margin-right: 5px;
  transition: all 0.3s;
  min-width: 110px;
  &:hover {
    color: $secondary;
    background-color: red;
    text-decoration: none;
  }
}

.buttons-container {
  display: flex;
  position: relative;
  width: 100%;
  justify-content: center;
  margin: 80px 0 80px 0;
}

.shop-container {
  width: 100%;
}

.form-footer-container {
  justify-content: center;
  text-align: center;
}

.align-left {
  align-content: flex-start !important;
  justify-content: left !important;
  text-align: left !important;
}

.label-margin {
  margin: 0 8px 0 8px;
}

.slider-div {
  min-height: 20vh;
  max-width: 200px;
}

.slider-container {
  width: 100%;
  height: 100%;
  align-content: center !important;
  justify-content: center !important;
  text-align: center !important;
  padding: 0 5% 0 5%;
}

.slider-content {
  max-width: 80% !important;
  margin: 0 auto 0 auto;
}

.slick-next:before {
  text-align: left;
  font-size: 40px;
  line-height: 1;
  opacity: 0.75;
  color: #000;
}
.slick-prev:before {
  text-align: center;
  font-size: 40px;
  line-height: 1;
  opacity: 0.75;
  color: #000;
}

.slick-prev {
  left: -45px;
}

.charImg {
  width: 100%;
  height: 200px;
  background-size: cover;
  cursor: pointer;
  transition: all 0.3s;
  border-radius: 10px;
  &:hover {
    border-style: solid;
    border-width: 5px;
    border-color: #4762b7;
  }
}

.max-height {
  height: 100%;
}

.text-center {
  text-align: center;
}

.box-container {
  display: flex;
  flex-direction: column;
  // flex-wrap: wrap;
  position: relative;

  width: 100%;
  min-height: 10vh !important;

  padding: 8vh 0;

  justify-content: center;
  align-content: center;
  align-items: center;
  .box {
    width: 100%;
  }

  .box-check {
    width: auto;
  }
}

.inputauto {
  width: auto !important;
}

.input-div {
  width: auto;
}

.input-group {
  background-color: #fff;
  display: block;
  margin: 10px 0;
  position: relative;
  border-radius: 10px;

  .radio-label {
    padding: 8px 30px;
    width: 100%;
    display: block;
    text-align: left;
    color: #3c454c;
    cursor: pointer;
    position: relative;
    z-index: 2;
    transition: color 200ms ease-in;
    overflow: hidden;
    border-radius: 10px;
    font-family: $big-text;

    &:before {
      width: 10px;
      height: 10px;
      border-radius: 50%;
      content: "";
      background-color: #4762b7;
      position: absolute;
      left: 50%;
      top: 50%;
      transform: translate(-50%, -50%) scale3d(1, 1, 1);
      transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
      opacity: 0;
      z-index: -1;
    }

    &:after {
      width: 32px;
      height: 32px;
      content: "";
      border: 2px solid #d1d7dc;
      background-color: #fff;
      background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
      background-repeat: no-repeat;
      background-position: 2px 3px;
      border-radius: 50%;
      z-index: 2;
      position: absolute;
      right: 30px;
      top: 50%;
      transform: translateY(-50%);
      cursor: pointer;
      transition: all 200ms ease-in;
    }
  }

  .radio-input:checked ~ .radio-label {
    color: #fff;

    &:before {
      transform: translate(-50%, -50%) scale3d(56, 56, 1);
      opacity: 1;
    }

    &:after {
      background-color: #22c197;
      border-color: #22c197;
    }
  }

  .radio-input {
    width: 32px;
    height: 32px;
    order: 1;
    z-index: 2;
    position: absolute;
    right: 30px;
    top: 50%;
    transform: translateY(-50%);
    cursor: pointer;
    visibility: hidden;
  }
}

.form {
  padding: 0 16px;
  max-width: 550px;
  margin: auto;
  font-size: 18px;
  font-weight: 600;
  line-height: 36px;
}

